--- a/episodes/season_29.yml
+++ b/episodes/season_29.yml
@@ -141,7 +141,7 @@ episodes:
   writers:
   description: Homer learns to love a piece of art.
   disneyplus_id: 94a1ceb3-ad15-42f3-adcd-92183c27caaf
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: 3 Scenes Plus a Tag from a Marriage
@@ -152,7 +152,7 @@ episodes:
   writers:
   description: The Simpsons visit their old apartment and remember the days without their kids.
   disneyplus_id: 144bb57c-9b2d-4ec0-9815-ab6aef446b46
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Fears of a Clown
@@ -163,7 +163,7 @@ episodes:
   writers:
   description: Due to a general fear of clowns, Krusty can no longer do his job.
   disneyplus_id: b39ae395-33c3-482a-9583-3dcea6e42473
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: No Good Read Goes Unpunished
@@ -174,7 +174,7 @@ episodes:
   writers:
   description: Bart tries to conquer Homer with help from a book.
   disneyplus_id: 9045ffae-7815-447b-833c-b5e04fc16a06
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: King Leer
@@ -185,7 +185,7 @@ episodes:
   writers:
   description: Moe inherits a mattress business from his father.
   disneyplus_id: 665a15a4-6cb1-4dda-842c-2b064e272fec
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Lisa Gets the Blues
@@ -196,7 +196,7 @@ episodes:
   writers:
   description: The family goes to New Orleans where they try to recover from various traumas.
   disneyplus_id: aca8364d-d82c-49f3-a9ba-d7f963e04daa
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Forgive and Regret
@@ -207,7 +207,7 @@ episodes:
   writers:
   description: Grampa is about to die when he reveals a terrible secret.
   disneyplus_id: 37eeaacc-1476-42f5-9374-59d6bd3ebbac
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Left Behind
@@ -218,7 +218,7 @@ episodes:
   writers:
   description: Flanders loses his business and works with Homer at the plant.
   disneyplus_id: f509e8af-0f86-4c74-87ed-81b96b3c6dac
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Throw Grampa from the Dane
@@ -229,7 +229,7 @@ episodes:
   writers:
   description: The Simpsons visit Denmark and everyone but Homer falls in love with the happy country.
   disneyplus_id: b86d94e2-6991-463d-a0eb-0125d1aa4e8d
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: Flanders' Ladder
@@ -240,6 +240,6 @@ episodes:
   writers:
   description: Bart is struck by lightning and has horrible dreams.
   disneyplus_id: 00e15f02-f80c-473c-b8ee-94dad1ba4a8b
-  simpsonsworld_id:
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
