--- a/episodes/season_32.yml
+++ b/episodes/season_32.yml
@@ -217,7 +217,7 @@ episodes:
   writers: ['J. Stewart Burns']
   description: Lisa makes a shocking college decision, wounding Marge. It leads to a very surprising place.
   disneyplus_id: b49da137-f3d0-4d84-bd7f-4a6d304812c6
-  simpsonsworld_id: null null
+  simpsonsworld_id: null
   good: maybe
   guest_stars:
 - title: The Man From G.R.A.M.P.A.
